--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 			<nav class="navbar navbar-expand-md navbar-light px-0 py-3 col-lg-6 mx-lg-auto">
 				<a class="navbar-brand px-2 px-md-4" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de navigation de La Chouette Agence" height="40"/></a>
 				<button class="navbar-toggler px-2 px-md-4" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-				<div class="collapse navbar-collapse navba r-1 special-dropdown-nav justify-content-md-end" id="navbarSupportedContent">
+				<div class="collapse navbar-collapse special-dropdown-nav justify-content-md-end" id="navbarSupportedContent">
 					<ul class="site-navigation nav navbar-nav">
 						<li class="nav-item pl-4"><a class="nav-link" href="index.html">Accueil </a></li>
 						<li class="nav-item pl-4">
@@ -67,10 +67,10 @@
 				</div>
 			</nav>
 			<!-- SECTION HEADER -->
-			<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+			<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper">
 				<div class="container bloc-lg">
 					<h1 class="text-center hero-bloc-text t-tangerine">Parlons web design !</h1>
-					<p class="text-center mg-lg t-tangerine tight-width-whitespace">
+					<p class="text-center t-tangerine tight-width-whitespace">
 						Nous sommes ravis que vous souhaitiez collaborer avec notre agence.
 						<br>
 						Parlez-nous de votre projet en complétant le formulaire ci-dessous.
@@ -80,7 +80,7 @@
 		</header>
 		<!-- CORPS DE PAGE -->
 		<main class="page-container">
-			<section class="bloc bgc-white l-bloc" id="bloc-7">
+			<section class="bloc">
 				<div class="col-12 mx-auto d-flex flex-wrap justify-content-around mt-5">
 					<!-- FORMULAIRE -->
 					<form id="form_1" class="col-12 col-md-6" novalidate="" success-msg="Votre message a été envoyé !"fail-msg="Oops, il semble que nous ayons des problèmes avec notre messagerie, réessayez plus tard.">
