--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<nav class="navbar navbar-expand-md navbar-light px-0 py-3 col-lg-6 mx-lg-auto">
 				<a class="navbar-brand px-2 px-md-4" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de navigation de La Chouette Agence" height="40"/></a>
 				<button class="navbar-toggler px-2 px-md-4" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-				<div class="collapse navbar-collapse navba r-1 special-dropdown-nav justify-content-md-end"id="navbarSupportedContent">
+				<div class="collapse navbar-collapse special-dropdown-nav justify-content-md-end" id="navbarSupportedContent">
 					<ul class="site-navigation nav navbar-nav">
 						<li class="nav-item active pl-4">
 							<a class="nav-link" href="index.html">Accueil <span class="sr-only">(current)</span></a>
@@ -81,7 +81,7 @@
 		<!-- CORPS DE PAGE -->
 		<main>
 			<!-- NOS SERVICES -->
-			<section class="bloc l-bloc text-center col-lg-8 mx-auto my-5">
+			<section class="bloc text-center col-lg-8 mx-auto my-5">
 				<h2 class="pt-4 h1 u-tangerine">NOS SERVICES</h2>
 				<p class="h4 col-8 mx-auto text-center my-5">
 					La chouette agence est une <strong>agence de web design</strong> qui aide les entreprises à devenir attractives et <strong>visibles sur Internet.</strong>
@@ -141,7 +141,7 @@
 				</div>
 			</section>
 			<!-- PORTFOLIO -->
-			<section class="bloc bgc-white bg-lines-h2-bg bg-repeat">
+			<section class="bloc bg-lines-h2-bg bg-repeat">
 				<div class="col-12 text-center">
 					<h2 class="pt-5 h1 u-tangerine">PORTFOLIO</h2>
 					<p class="h4 py-5">
