--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -48,11 +48,11 @@
 			<nav class="navbar navbar-expand-md navbar-light px-0 py-3 col-lg-6 mx-lg-auto">
 				<a class="navbar-brand px-2 px-md-4" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de navigation de La Chouette Agence" height="40"/></a>
 				<button class="navbar-toggler px-2 px-md-4" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-				<div class="collapse navbar-collapse navba r-1 special-dropdown-nav justify-content-md-end" id="navbarSupportedContent">
+				<div class="collapse navbar-collapse special-dropdown-nav justify-content-md-end" id="navbarSupportedContent">
 					<ul class="site-navigation nav navbar-nav">
 						<li class="nav-item pl-4"><a class="nav-link" href="index.html">Accueil </a></li>
 						<li class="nav-item pl-4">
-							<a class="nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
 					</ul>
 				</div>
@@ -66,7 +66,7 @@
 			</section>
         </header>
         <!-- CORPS DE PAGE -->
-		<main class="page-container bloc bgc-white l-bloc col-8 mx-auto my-5 text-center">
+		<main class="page-container bloc   col-8 mx-auto my-5 text-center">
             <!-- DESCRIPTION DU SITE -->
 			<section class="py-4">
 				<h2 class=" py-2 mx-auto">Présentation du site :</h2>
