--- a/contact.html
+++ b/contact.html
@@ -16,19 +16,19 @@
 		<title>La Chouette Agence - Contact</title>
 		<meta name="robots" content="follow">
 		<meta name="title" content="La chouette agence - Contact">
-		<meta name="description"content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets. Contactez-nous !">
+		<meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets. Contactez-nous !">
 		<meta name="Content-Type" content="UTF-8">
 		<meta name="Content-Language" content="fr">
 		<meta name="Identifier-Url" content="https://jenniferjoret.github.io/OC-P4/contact.html">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://jenniferjoret.github.io/OC-P4/contact.html">
 		<meta property="og:title" content="La chouette agence - Contact">
-		<meta property="og:description"content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets. Contactez-nous !">
+		<meta property="og:description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets. Contactez-nous !">
 		<meta property="og:image" content="https://jenniferjoret.github.io/OC-P4/img/logo.png">
 		<meta property="twitter:card" content="summary_large_image">
 		<meta property="twitter:url" content="https://jenniferjoret.github.io/OC-P4/contact.html">
 		<meta property="twitter:title" content="La chouette agence - Contact">
-		<meta property="twitter:description"content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets. Contactez-nous !">
+		<meta property="twitter:description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets. Contactez-nous !">
 		<meta property="twitter:image" content="https://jenniferjoret.github.io/OC-P4/img/logo.png">
 		<link rel="apple-touch-icon" sizes="57x57" href="img/ico/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="img/ico/apple-icon-60x60.png">
@@ -81,9 +81,11 @@
 		<!-- CORPS DE PAGE -->
 		<main class="page-container">
 			<section class="bloc">
+				<h2 class="pt-5 h1 u-tangerine text-center col-12 col-md-7">Formulaire de contact</h2>
 				<div class="col-12 mx-auto d-flex flex-wrap justify-content-around mt-5">
+
 					<!-- FORMULAIRE -->
-					<form id="form_1" class="col-12 col-md-6" novalidate="" success-msg="Votre message a été envoyé !"fail-msg="Oops, il semble que nous ayons des problèmes avec notre messagerie, réessayez plus tard.">
+					<form id="form_1" class="col-12 col-md-6" novalidate="" success-msg="Votre message a été envoyé !" fail-msg="Oops, il semble que nous ayons des problèmes avec notre messagerie, réessayez plus tard.">
 						<div class="form-group">
 							<label for="name">Nom</label>
 							<input id="name" class="form-control" required/>
@@ -93,8 +95,8 @@
 							<input id="email" class="form-control" type="email" required/>
 						</div>
 						<div class="form-group">
-							<label for="how">Comment nous avez-vous connu ?</label>
-							<input id="how" class="form-control" type="text" required id="input_504"/>
+							<label for="input_504">Comment nous avez-vous connu ?</label>
+							<input class="form-control" type="text" required id="input_504"/>
 						</div>
 						<div class="form-group">
 							<label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)<br></label>
@@ -103,13 +105,13 @@
 						<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">Envoyer</button>
 					</form>
 					<!-- CARTE DE RENSEIGNEMENTS -->
-					<aside class="text-center col-12 col-sm-auto contact-info px-5 py-2">
+					<aside class="text-center col-12 col-sm-auto contact-info mt-5 mt-md-0 px-5 py-2">
 						<h2 class="my-4 text-dark">INFORMATIONS DE CONTACT</h2>
 						<ul class="list-unstyled d-flex flex-column">
 							<li>
 								<p>
 									<span>Mail : </span>
-									<a href="mailto:contact@lachouetteagence.com"title="envoyer un mail à La chouette agence">contact@lachouetteagence.com</a>
+									<a href="mailto:contact@lachouetteagence.com" title="envoyer un mail à La chouette agence">contact@lachouetteagence.com</a>
 								</p>
 							</li>
 							<li>
@@ -133,7 +135,7 @@
 				</div>
 				<!-- GOOGLE MAPS -->
 				<div class="col-8 mx-auto my-5">
-					<iframe id="g-maps-lca"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d347.8857043255585!2d4.829982896540446!3d45.76947403077419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Place%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1591975332032!5m2!1sfr!2sfr"allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+					<iframe id="g-maps-lca" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d347.8857043255585!2d4.829982896540446!3d45.76947403077419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Place%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1591975332032!5m2!1sfr!2sfr" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 				</div>
 			</section>
 			<a class="bloc-button btn btn-d scrollToTop" id="back-to-top" href="#"><span class="fa fa-chevron-up"></span></a>
@@ -142,9 +144,9 @@
 		<footer class="bloc bgc-atomic-tangerine d-bloc p-0">
 			<section class="container py-2 mx-0 text-center col-12 text-dark">
 				<!-- TITRE -->
-				<p class="col-12 my-2 h5">
+				<h5 class="col-12 my-2 h5">
 					La chouette agence - Agence web basée à Lyon.
-				</p>
+				</h5>
 				<!-- RÉSEAUX SOCIAUX -->
 				<div class="col-12 d-flex flex-wrap justify-content-between p-0 mt-3">
 					<div class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
@@ -154,14 +156,14 @@
 						<a class="social" href="https://www.instagram.com/Lachouetteagence" title="Lien vers le compte instagram de La chouette agence"><span class="fab fa-instagram icon-md"></span></a>
 					</div>
 					<!-- AUTRES LIENS -->
-					<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3"title="Mentions légales de La chouette agence"><span class="fas fa-file-contract fa-lg pr-2"></span>Mentions légales</a>
-					<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3"title="Page contact de La chouette agence">Nous trouver<span class="fas fa-map-marked-alt fa-lg pl-2"></span></a>
+					<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3" title="Mentions légales de La chouette agence"><span class="fas fa-file-contract fa-lg pr-2"></span>Mentions légales</a>
+					<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3" title="Page contact de La chouette agence">Nous trouver<span class="fas fa-map-marked-alt fa-lg pl-2"></span></a>
 				</div>
 			</section>
 		</footer>
-		<script src="https://code.jquery.com/jquery-3.5.1.min.js"integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 		<script src="js/jqBootstrapValidation.js"></script>
 		<script src="js/formHandler.js"></script>
 	</body>
