--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 		<title>La Chouette Agence - Agence de web design</title>
 		<meta name="robots" content="index, follow">
 		<meta name="title" content="La chouette agence - Agence de web design">
-		<meta name="description"content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets.">
+		<meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets.">
 		<meta name="Content-Type" content="UTF-8">
 		<meta name="Content-Language" content="fr">
 		<meta name="Identifier-Url" content="https://jenniferjoret.github.io/OC-P4/">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://jenniferjoret.github.io/OC-P4/">
 		<meta property="og:title" content="La chouette agence - Agence de web design">
-		<meta property="og:description"content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets.">
+		<meta property="og:description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets.">
 		<meta property="og:image" content="https://jenniferjoret.github.io/OC-P4/img/logo.png">
 		<meta property="twitter:card" content="summary_large_image">
 		<meta property="twitter:url" content="https://jenniferjoret.github.io/OC-P4/">
 		<meta property="twitter:title" content="La chouette agence - Agence de web design">
-		<meta property="twitter:description"content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets.">
+		<meta property="twitter:description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets.">
 		<meta property="twitter:image" content="https://jenniferjoret.github.io/OC-P4/img/logo.png">
 		<link rel="apple-touch-icon" sizes="57x57" href="img/ico/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="img/ico/apple-icon-60x60.png">
@@ -50,8 +50,8 @@
 		<!--[if lt IE 9]>
 		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous"/>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous"/>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="./css/style.min.css">
 	</head>
 	<body class="container-fluid p-0 no-gutters">
@@ -72,9 +72,9 @@
 			<!-- SECTION HEADER -->
 			<section class="bloc bg-banniere bg-t-edge bloc-bg-texture texture-paper b-parallax py-5">
 				<div class="col-10 col-lg-4 text-center black-background mx-auto">
-					<img src="img/logo.png" class="center-block image-resize-mode pb-4" width="100"alt="Logo de La chouette agence">
+					<img src="img/logo.png" class="center-block image-resize-mode pb-4" width="100" alt="Logo de La chouette agence">
 					<h1 class="text-center hero-bloc-text tc-white h2 ">La chouette agence.</h1>
-					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"title="Page contact de La chouette agence">Contact</a>
+					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" title="Page contact de La chouette agence">Contact</a>
 				</div>
 			</section>
 		</header>
@@ -125,21 +125,21 @@
 				</div>
 			</section>
 			<!-- DESCRIPTION -->
-			<section class="bloc bgc-atomic-tangerine bg-presentation bloc-bg-texture texture-paper b-parallax bloc-lg">
-				<div class="col-10 col-lg-6 mx-auto text-center black-background">
+			<div class="bloc bgc-atomic-tangerine bg-presentation bloc-bg-texture texture-paper b-parallax bloc-lg text-center">
+				<div class="col-10 col-lg-6 mx-auto black-background">
 					<p class="my-3 tc-white h4">
 						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
 					</p>
 					<p class="text-white">
 						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locales, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. 
 						<br>
-						Que vous ayez besoin d’une <strong>identité visuelle complète</strong> ou d’une <strong>refonte de votre site</strong> , n’hésitez pas à nous contacter. 
+						Que vous ayez besoin d’une <strong>identité visuelle complète</strong> ou d’une <strong>refonte de votre site</strong>, n’hésitez pas à nous contacter. 
 						<br>
 						Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
 					</p>
 					<a class="text-white bold-link" href="contact.html" title="Page contact de La chouette agence">Contactez notre équipe</a>
 				</div>
-			</section>
+			</div>
 			<!-- PORTFOLIO -->
 			<section class="bloc bg-lines-h2-bg bg-repeat">
 				<div class="col-12 text-center">
@@ -150,7 +150,7 @@
 						voici nos réalisations.
 					</p>
 				</div>
-				<section class="d-flex flex-wrap col-md-6 mx-auto">
+				<div class="d-flex flex-wrap col-md-6 mx-auto">
 					<!-- ARTICLE 1 -->
 					<article class="col-sm-6 pb-md-5">
 						<a href="#" data-lightbox="img/imgFull/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Image d'illustration - pile de livres" class="img-fluid portfolio-thumb"/></a>
@@ -183,14 +183,14 @@
 							Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 						</p>
 					</article>
-				</section>
+				</div>
 			</section>
 			<!-- DERNIER ENCART CONTACT -->
 			<section class="bloc bg-banniere bloc-bg-texture texture-paper p-5">
 				<div class="container text-center black-background col-12 col-md-5">
 					<h2 class="mb-3 tc-white h4">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h2>
 					<div class="col-12">
-						<a href="contact.html" class="btn btn-atomic-tangerine btn-shadows btn-rd btn-lg cta-hero"title="Page contact de La chouette agence">Contact</a>
+						<a href="contact.html" class="btn btn-atomic-tangerine btn-shadows btn-rd btn-lg cta-hero" title="Page contact de La chouette agence">Contact</a>
 					</div>
 				</div>
 			</section>
@@ -200,9 +200,9 @@
 		<footer class="bloc bgc-atomic-tangerine d-bloc p-0">
 			<section class="container py-2 mx-0 text-center col-12 text-dark">
 				<!-- TITRE -->
-				<p class="col-12 my-2 h5">
+				<h5 class="col-12 my-2 h5">
 					La chouette agence - Agence web basée à Lyon.
-				</p>
+				</h5>
 				<!-- RÉSEAUX SOCIAUX -->
 				<div class="col-12 d-flex flex-wrap justify-content-between p-0 mt-3">
 					<div class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
@@ -212,14 +212,14 @@
 						<a class="social" href="https://www.instagram.com/Lachouetteagence" title="Lien vers le compte instagram de La chouette agence"><span class="fab fa-instagram icon-md"></span></a>
 					</div>
 					<!-- AUTRES LIENS -->
-					<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3"title="Mentions légales de La chouette agence"><span class="fas fa-file-contract fa-lg pr-2"></span>Mentions légales</a>
-					<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3"title="Page contact de La chouette agence">Nous trouver<span class="fas fa-map-marked-alt fa-lg pl-2"></span></a>
+					<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3" title="Mentions légales de La chouette agence"><span class="fas fa-file-contract fa-lg pr-2"></span>Mentions légales</a>
+					<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3" title="Page contact de La chouette agence">Nous trouver<span class="fas fa-map-marked-alt fa-lg pl-2"></span></a>
 				</div>
 			</section>
 		</footer>
-		<script src="https://code.jquery.com/jquery-3.5.1.min.js"integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js" integrity="sha256-ns1OeEP3SedE9Theqmu444I44sikbp1O+bF/6BNUUy0=" crossorigin="anonymous"></script>
 		<script src="js/carousel.min.js"></script>
 	</body>
